spec/error_immutable_assign.kex
# Reassigning a `let` binding with `=` is a runtime error; only `var`
# bindings may be reassigned.
main do
  let x = 1
  IO.printLine(x)
  x = 2
end
